<resources>
    <string name="app_name">Smart Energy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_intro">Introduction</string>
    <string name="welcome">Hello, welcome to Smart Energy. This app starts a service in the background that keeps track of information related to your carbon dioxide footprint.</string>
    <string name="howItWorks">For every day, the app will present you the energy usage and its corresponding CO\u2082 emissions. The higher a bar, the more emissions you caused. The bars stand for emissions caused by walking (you must eat food for this), using public transportation and driving a car, respectively.</string>
    <string name="permission_storage">In order to store the logged data, please allow access to the storage system. Otherwise, the app cannot work.</string>
    <string name="permission_location">In order to get your position, the app needs location access.</string>
    <string name="permission_internet">Giving you the most accurate transportation mode classifications, the app needs internet access.</string>
    <string name="going_settings">Now, we will go through a few settings on the next pages. You can also change them later by going to \"Settings\" or doing the tutorial again.</string>
    <string name="all_set">Thanks, everything is set up.</string>
    <string name="pref_header_transport">Modes of Transport</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="pref_key_used_transportation">used_transportation_type_key</string>
    <string name="pref_title_used_transportation">Modes of Transport</string>
    <string name="pref_summary_used_transportation">Choose the means of transportation you use regularly</string>
    <string name="airplane">Airplane</string>
    <string name="train">Train</string>
    <string name="car">Car</string>
    <string name="tram">Tram</string>
    <string name="bicycle">Bicycle</string>
    <string-array name="preference_array_used_transportation_entries">
        <item>@string/airplane</item>
        <item>@string/train</item>
        <item>@string/car</item>
        <item>@string/tram</item>
        <item>@string/bicycle</item>
    </string-array>
    <string-array name="preference_array_used_transportation_values">
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
        <item>@string/five</item>
    </string-array>
    <string name="intro_car_usage">Specify the amount of [l/100km] your car uses or pick a given option.</string>
    <string name="pref_key_usage">pref_key_usage</string>
    <string name="pref_title_usage">Car Fuel Usage</string>
    <string name="pref_summary_usage">How many [l/100km] my care uses</string>
    <string name="pref_key_car_type">car_type_key</string>
    <string name="pref_title_car_type">Car Type</string>
    <string name="pref_summary_car_type">Choose the type of your primary used car</string>
    <string name="small">Small (5 l/100km)</string>
    <string name="medium">Medium (8 l/100km)</string>
    <string name="big">Big (12 l/100km)</string>
    <string-array name="preference_array_car_type_entries">
        <item>@string/small</item>
        <item>@string/medium</item>
        <item>@string/big</item>
    </string-array>
    <string-array name="preference_array_car_type_values">
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
    </string-array>
    <string name="preference_car_type_values_default">2</string>
    <string name="fuelUnit">l/100km</string>
    <string name="pref_key_knows_usage">knows_usage</string>
    <string name="pref_title_knows_usage">Car Fuel Consumption Known</string>
    <string name="pref_summary_knows_usage">I can specify the value in [l/100km].</string>
    <string name="pref_key_fuel_type">fuel_type_key</string>
    <string name="pref_title_fuel_type">Fuel Type</string>
    <string name="pref_summary_fuel_type">Choose the type of fuel your primary car uses</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string-array name="preference_array_fuel_type_entries">
        <item>@string/petrol</item>
        <item>@string/diesel</item>
    </string-array>
    <string-array name="preference_array_fuel_type_values">
        <item>@string/one</item>
        <item>@string/two</item>
    </string-array>
    <string name="preference_fuel_type_values_default">1</string>
    <string name="pref_header_home">Home</string>
    <string name="pref_key_heating_type">heating_type_key</string>
    <string name="pref_title_heating_type">Heating Type</string>
    <string name="pref_summary_heating_type">Choose the type of heating system your house uses</string>
    <string name="oil">Oil</string>
    <string name="gas">Gas</string>
    <string name="electric">Electric</string>
    <string name="air">Air Source Heat Pump</string>
    <string name="ground">Ground Source Heat Pump</string>
    <string-array name="preference_array_heating_type_entries">
        <item>@string/oil</item>
        <item>@string/gas</item>
        <item>@string/electric</item>
        <item>@string/air</item>
        <item>@string/ground</item>
    </string-array>
    <string-array name="preference_array_heating_type_values">
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
        <item>@string/five</item>
    </string-array>
    <string name="preference_heating_type_values_default">1</string>
    <string name="intro_area">Specify how big your primary living area is or pick a given option.</string>
    <string name="pref_key_exact_area">pref_key_exact_area</string>
    <string name="pref_title_exact_area">Size of Living Area</string>
    <string name="pref_summary_exact_area">How many square meters I am living in</string>
    <string name="pref_key_area">pref_key_area</string>
    <string name="pref_title_area">Housing Type (area)</string>
    <string name="pref_summary_area">Choose the type of your primary used housing in terms of area</string>
    <string name="areaUnit">m\u00B2</string>
    <string name="pref_key_knows_area">knows_area</string>
    <string name="pref_title_knows_area">Living Area Size Known</string>
    <string name="pref_summary_knows_area">I can specify the value in [m\u00B2].</string>
    <string name="room">Room (16m\u00B2)</string>
    <string name="flat">Flat (80m\u00B2)</string>
    <string name="house">House (180m\u00B2)</string>
    <string name="villa">Villa (500m\u00B2)</string>
    <string-array name="preference_array_area_entries">
        <item>@string/room</item>
        <item>@string/flat</item>
        <item>@string/house</item>
        <item>@string/villa</item>
    </string-array>
    <string-array name="preference_array_area_values">
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
    </string-array>
    <string name="preference_area_values_default">2</string>
    <string name="pref_key_age">pref_key_age</string>
    <string name="pref_title_age">Housing Type (efficiency)</string>
    <string name="pref_summary_age">Choose the type of your primary used housing in terms of efficiency</string>
    <string name="recent">New Building</string>
    <string name="renovated">Renovated</string>
    <string name="old">Old Building</string>
    <string name="minergie">Minergie</string>
    <string name="p">Minergie P</string>
    <string name="a">Minergie A</string>
    <string-array name="preference_array_age_entries">
        <item>@string/recent</item>
        <item>@string/renovated</item>
        <item>@string/old</item>
        <item>@string/minergie</item>
        <item>@string/p</item>
        <item>@string/a</item>
    </string-array>
    <string-array name="preference_array_age_values">
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
        <item>@string/five</item>
        <item>@string/six</item>
    </string-array>
    <string name="preference_age_values_default">2</string>
    <string name="pref_header_lifestyle">Lifestyle</string>
    <string name="pref_key_diet_type">diet_type_key</string>
    <string name="pref_title_diet_type">Diet Type</string>
    <string name="pref_summary_diet_type">Choose the diet type that best fits you.</string>
    <string name="meat_lover">Meat Lover</string>
    <string name="average">Average</string>
    <string name="no_beef">No Beef</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string-array name="preference_array_diet_type_entries">
        <item>@string/meat_lover</item>
        <item>@string/average</item>
        <item>@string/no_beef</item>
        <item>@string/vegetarian</item>
        <item>@string/vegan</item>
    </string-array>
    <string-array name="preference_array_diet_type_values">
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
        <item>@string/five</item>
    </string-array>
    <string name="preference_diet_type_values_default">2</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="detected_activities_title">Detected Activities</string>
    <string name="request_activity_updates">Request updates</string>
    <string name="remove_activity_updates">Remove updates</string>
</resources>