<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pref_summary_used_transportation"
        android:textColor="#ff0000"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkBoxAirplane"
        android:text="@string/airplane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/checkBoxTrain"
        android:text="@string/train"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/checkBoxCar"
        android:text="@string/car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/checkBoxTram"
        android:text="@string/tram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/checkBoxBicycle"
        android:text="@string/bicycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>