<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200sp"
        app:srcCompat="@drawable/ic_home_white_48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:paddingBottom="20sp"
        android:text="@string/pref_summary_age"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recent" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_renovated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/renovated" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_minergie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minergie" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a" />

    </RadioGroup>

</LinearLayout>