<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:paddingBottom="20sp"
        android:text="@string/pref_header_lifestyle"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200sp"
        app:srcCompat="@drawable/ic_restaurant_menu_white_48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:paddingBottom="20sp"
        android:text="@string/pref_summary_diet_type"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_meet_lover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meat_lover" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/average" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_no_beef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_beef" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_vegetarian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vegetarian" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_vegan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vegan" />
    </RadioGroup>

</LinearLayout>