<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/orange"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200sp"
        app:srcCompat="@drawable/ic_car_hatchback_white_48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:paddingBottom="20sp"
        android:text="@string/intro_car_usage"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextFuelUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:textColor="@color/white"
            android:text="@string/fuelUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/small" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/big" />
    </RadioGroup>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/pref_title_fuel_type" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_petrol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/petrol" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_diesel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diesel" />
    </RadioGroup>


</LinearLayout>