<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/turkey"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200sp"
        app:srcCompat="@drawable/ic_hot_tub_white_48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:paddingBottom="20sp"
        android:text="@string/pref_summary_heating_type"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_oil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oil" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_gas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gas" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_electric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/electric" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_air"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/air" />

        <RadioButton
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/radio_ground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ground" />

    </RadioGroup>

</LinearLayout>