<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.ethz.inf.se.a1.smartenergy.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Smart energy!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintVertical_bias="0.206"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:id="@+id/textView2" />

    <Button
        android:id="@+id/request_activity_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="requestActivityUpdatesButtonHandler"
        android:text="@string/request_activity_updates"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/detected_activities_listview"
        android:layout_marginStart="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="9dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/remove_activity_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/request_activity_updates_button"
        android:layout_toEndOf="@id/request_activity_updates_button"
        android:onClick="removeActivityUpdatesButtonHandler"
        android:text="@string/remove_activity_updates"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="3dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/showGraph_button"
        android:layout_width="65dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="showGraphView"
        android:text="Graph"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/detected_activities_listview"
        android:layout_marginBottom="11dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/remove_activity_updates_button"
        app:layout_constraintHorizontal_bias="0.935" />

    <TextView
        android:id="@+id/detected_activities_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detected_activities_title"
        android:textSize="@dimen/headline_text_size"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/detected_activities_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="3dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/remove_activity_updates_button"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
